# ROOT_NA49

./: .root49dsts  CMakeLists.txt  productionMap.h  set49_local.sh  setEnvNA49.sh
.svn/: entries
.svn/text-base/: CHANGES.svn-base  CMakeLists.txt.svn-base  README.svn-base
CMakeModules/: FindDSPACK.cmake  FindNA49.cmake  FindRoot.cmake  NA49ConfigureMacros.cmake
CMakeModules/.svn/: entries
CMakeModules/.svn/text-base/: FindDSPACK.cmake.svn-base  FindNA61.cmake.svn-base  FindPGIFortran.cmake.svn-base  NA61ConfigureMacros.cmake.svn-base  NA61UtilityMacros.cmake.svn-base  UseDoxygen.cmake.svn-base
Documentation/: Doxy_MainPage.dox  Doxyfile.in
Documentation/.svn/: entries
Documentation/.svn/text-base/: CMakeLists.txt.svn-base  Doxy_footer.html.svn-base
RootDS/: CMakeLists.txt
RootDS/.svn/: entries
RootDS/.svn/text-base/: CMakeLists.txt.svn-base
RootDS/inc/: RootDSLinkDef.h  TRootDSMC.h  dspack_rootds.h  gteval_match_t_root.h  na49_event_mc_str_root.h
RootDS/inc/.svn/: entries
RootDS/src/: TRootDSMC.C
RootDS/src/.svn/: entries
T49ANA/: CMakeLists.txt
T49ANA/inc/: #T49SumGaus.h#  PhysConst.h  T49ANALinkDef.h  T49BeamRoot.h  T49Container.h  T49Cut.h  T49Cut2Track.h  T49CutEvent.h  T49CutPid.h  T49CutTrack.h  T49CutV0.h  T49DSTLinkDef.h  T49Dedx.h  T49DedxFunction.h  T49DedxInfo.h  T49EventMCRoot.h  T49EventRoot.h  T49Geant.h  T49HbtCoulomb.h  T49HbtFitBase.h  T49HbtFitDivers.h  T49HbtMomentumResolutionCalculation.h  T49HbtMomentumResolutionCorrection.h  T49Histogram.h  T49Histogram1D.h  T49Histogram2D.h  T49Histogram3D.h  T49InMuDST.h  T49Index.h  T49Mixer.h  T49Mixing.h  T49Mixing.h~  T49MonitorTPC.h  T49MonitorTPCRoot.h  T49MultiMixer.h  T49OnePeak.h  T49Padtrans.h  T49Particle.h  T49ParticleIdRoot.h  T49ParticleMCRoot.h  (+14 more)
T49ANA/inc/BACK/: T49DedxInfo.h  T49SumGaus.h  T49SumGausBack.h
T49ANA/src/: T49ANADict.C  T49ANADict.h  T49Container.C  T49Cut.C  T49Cut2Track.C  T49CutEvent.C  T49CutPid.C  T49CutTrack.C  T49CutV0.C  T49Dedx.C  T49DedxFunction.C  T49DedxInfo.C  T49HbtCoulomb.C  T49HbtFitBase.C  T49HbtFitDivers.C  T49HbtMomentumResolutionCalculation.C  T49HbtMomentumResolutionCorrection.C  T49Histogram.C  T49Histogram1D.C  T49Histogram2D.C  T49Histogram3D.C  T49InMuDST.C  T49Index.C  T49Mixer.C  T49Mixing.C  T49MultiMixer.C  T49OnePeak.C  T49Padtrans.C  T49Prob.C  T49Proj1.C  T49Proj2.C  T49SumGaus.C  T49Tool.C  T49Trkstep.C  T49XiFinder.C  T49dEdxFunctions.C
T49ANA/src/BACK/: T49DedxInfo.C  T49SumGaus.C  T49SumGausBACK.C
T49CR/inc/: #T49CrDedx.h#  PhysConst.h  T49CRLinkDef.h  T49CrContainer.h  T49CrContainer.h~  T49CrCut.h  T49CrDedx.h~  T49CrIndex.h  T49CrInfo.h  T49CrMixer.h  T49CrParticle.h  T49CrSdynFit.h
T49CR/src/: Makefile.Linux  Makefile.Linux_copy  MakefileNoDS.Linux  MakefileNoDS.Linux.bs  T49CRDict.C  T49CRDict.h  T49CrContainer.C  T49CrCut.C.nocomp  T49CrDedx.C  T49CrIndex.C  T49CrInfo.C  T49CrMixer.C  T49CrParticle.C  T49CrSdynFit.C  save_Makefile.Linux  save_MakefileNoDS.Linux
T49DST/: CMakeLists.txt
T49DST/inc/: T49Beam.h  T49BeamRoot.h  T49DSTLinkDef.h  T49Event.h  T49MonitorTPCRoot.h  T49ParticleIdRoot.h  T49ParticleMCRoot.h  T49ParticleRoot.h  T49RingRoot.h  T49Vertex.h  T49VertexMCRoot.h  T49VertexRoot.h  T49VetoRoot.h
T49DST/src/: T49AbsClasses.C  T49BeamRoot.C  T49DSTDict.C  T49EventMCRoot.C  T49EventRoot.C  T49MonitorTPCRoot.C  T49ParticleIdRoot.C  T49ParticleMCRoot.C  T49ParticleRoot.C  T49RingRoot.C  T49Run.C  T49VertexMCRoot.C  T49VertexRoot.C  T49VetoRoot.C
T49DST/src/save_11_2007/: save_11_2007_T49EventRoot.C  save_11_2007_T49Run.C
data/: .root49dsts  .root49dsts.07.12.06  .root49dsts.12.12.05  .root49dsts.17.10.05  .root49dsts.20.01.06  .root49dsts.24.02.06  1_2std+-80GeV-central-01E.centrality  1_2std+-80GeV-central-01E.centrality_tdcal  1_2std+-80GeV-central-01E.corr  1_2std+-80GeV-central-UrQMD.centrality  1_2std+-80GeV-central-Venus.centrality  1_4std+-40GeV-CC-01F.centrality  1_4std+-40GeV-CC-01F.centrality_tdcal  1_4std+-40GeV-CC-01F.corr  1_4std+-40GeV-SiSi-01G.centrality  1_4std+-40GeV-SiSi-01G.centrality_tdcal  1_4std+-40GeV-SiSi-01G.corr  1_4std+-40GeV-central-00W.centrality  1_4std+-40GeV-central-00W.centrality_tdcal  1_4std+-40GeV-central-00W.corr  1_4std+-40GeV-central-UrQMD.centrality  1_4std+-40GeV-central-Venus.centrality  1_4std+-40GeV-minbias-02C.centrality  1_4std+-40GeV-minbias-02C.centrality_tdcal  1_4std+-40GeV-minbias-02C.corr  1_4std--40GeV-central-00C.centrality  1_4std--40GeV-central-00C.centrality_tdcal  1_4std--40GeV-central-00C.corr  1_4std--40GeV-minbias-01D.centrality  1_4std--40GeV-minbias-01D.corr  20G+-20GeV-central-03A.centrality  20G+-20GeV-central-03A.centrality_tdcal  20G+-20GeV-central-03A.corr  20G+-20GeV-central-UrQMD.centrality  20G+-20GeV-central-Venus.centrality  20G+-20GeV-semi-central-05B.centrality  20G+-20GeV-semi-central-05B.centrality_tdcal  20G+-20GeV-semi-central-05B.corr  30G+-30GeV-central-02J.centrality  30G+-30GeV-central-02J.centrality_tdcal  (+52 more)
doc/: T49.doc  T61.doc
doc/.svn/: entries
inc/: T49LinkDef.h  T49StrLinkDef.h  TRootDS.h  TRootDSMC.h  TRootDSmini.h  dsc_prot.h  dspack_rootds.h  gteval_match_t_root.h  gteval_match_user_t_root.h  gteval_nt_root.h  na49_event_mc_str_root.h  na49_event_str_root.h  na49_mini_root.h  padtrans_init.d  v0find_root.h  xi_find_root.h
inc/.svn/: entries
macro/: Makefile.Macro  T61_env.sh  ana_DS.C  ana_DS_mini.C  ana_T49.C  fill_mtpc_contain.C  fit_mtpc.C  minv.C  view_mtpc_result.C  xi.C
macro/.svn/: entries
macro/.svn/text-base/: Kstar_multi_mixing.C.svn-base  T61_env.csh.svn-base  copy.C.svn-base  copy_MC.C.svn-base  copy_mini.C.svn-base  copy_subset.C.svn-base  cut.C.svn-base  fit_verbose.C.svn-base  mc.C.svn-base  mix.C.svn-base  mix_simple.C.svn-base  two_runs.C.svn-base  use_pid.C.svn-base  v0.C.svn-base
src/: CMakeLists.txt  T49Main.C
src/.svn/: dir-prop-base  entries
src/.svn/text-base/: CMakeLists.txt.svn-base  T49Main.C.svn-base
www/: gen_inf.html  inst.html  rds_USER_Index.html
www/.svn/: entries
www/dst/: html_dst.C
www/macro/: macro.html
www/rds/: html_rds.C
(+26 files in other folders)
