GET_TARGET_PROPERTY(T49DST_LIBRARY T49DST LOCATION)
GET_TARGET_PROPERTY(T49ANA_LIBRARY T49ANA LOCATION)
GET_TARGET_PROPERTY(RootDS_LIBRARY RootDS LOCATION)

set(root49_SOURCES T49Main.C)

LIST(APPEND root49_INCLUDE_DIRECTORIES ${CMAKE_SOURCE_DIR}/T49DST/inc)
INCLUDE_DIRECTORIES(${root49_INCLUDE_DIRECTORIES})

add_executable(root49 ${root49_SOURCES})

LIST(APPEND root49_LINKED_LIBRARIES T49DST T49ANA ${ROOT_LIBS})
if (NOT DISABLE_DSPACK)
  LIST(APPEND root49_LINKED_LIBRARIES RootDS)
endif (NOT DISABLE_DSPACK)
TARGET_LINK_LIBRARIES(root49 ${root49_LINKED_LIBRARIES})

INSTALL(TARGETS root49 DESTINATION bin)
